tdf#170201: XLSX - empty values in array formulas

LO supports empty values in array formulas but Excel doesn't. Export
'0' when an array formula contains an empty value.

Change-Id: I5f289c0bf3f98cb75dffa925245afab67641eac2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196421
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>