sc/source/core/tool/compiler.cxx
@@ -5481,7 +5481,7 @@ void ScCompiler::CreateStringFromMatrix( OUStringBuffer& rBuffer, const FormulaT
                 }
             }
             else if( pMatrix->IsEmpty( nC, nR ) )
-                ;
+                AppendDouble(rBuffer, 0);
             else if( pMatrix->IsStringOrEmpty( nC, nR ) )
                 AppendString( rBuffer, pMatrix->GetString(nC, nR).getString() );
         }
